--- a/conditions_opdrachten/conditions_opdracht_2/index.html
+++ b/conditions_opdrachten/conditions_opdracht_2/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css"  href="css/style.css">
 </head>
 <body>
-    
+   <input type="number" id="geldOpname"> 
+   <button onclick="checkSaldo()">check saldo</button>
 </body>
 </html>
